# battery_carousel

./: .gitignore  BatteryCarousel.cpp  BatteryCarousel.h  BatteryList.cpp  BatteryList.h  CMakeLists.txt  MovingAverage.h  README.md  StableDigitalInput.h  battery_carousel.ino
test/: test_BatteryCarousel.cpp
